refactor: rename files and update theme references from logos to lsp

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "logos-ide",
+  "name": "logos",
   "version": "0.1.0",
   "description": "Logos IDE - PRTS DevOps Platform",
   "author": "Zixiao System",
