chore: add authorEmail field to package.json for improved contact information

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.2",
   "description": "Logos - Light and Smart Code Editor",
   "author": "Zixiao System",
+  "authorEmail": "hwllochen@qq.com",
   "license": "MIT",
   "main": "dist-electron/main.js",
   "scripts": {
