feat: enhance LSP server download logic and update project description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Logos",
   "version": "0.1.2",
-  "description": "Logos - Light and Smart Code Editor",
+  "description": "Logos - A Modern, Lightweight Code Editor",
   "author": {
     "name": "Zixiao System",
     "email": "hwllochen@qq.com"
