--- a/.github/workflows/Check.yml
+++ b/.github/workflows/Check.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Rust
-        uses: dtolnay/rust-action@stable
+        uses: actions/setup-rust@v1
 
       - name: Cache Cargo
         uses: actions/cache@v4
