feat: add Error Collect

--- a/.github/workflows/Check.yml
+++ b/.github/workflows/Check.yml
@@ -128,7 +128,8 @@ jobs:
       - name: Build (vite + electron-builder)
         env:
           CI: true
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         run: npm run build
 
       - name: Upload release artifacts
