--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   ],
   "dependencies": {
     "@mdui/icons": "^1.0.1",
+    "@sentry/electron": "^7.5.0",
+    "@sentry/vite-plugin": "^4.6.1",
     "@xterm/addon-fit": "^0.9.0",
     "@xterm/addon-web-links": "^0.10.0",
     "@xterm/xterm": "^5.4.0",
