--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -206,6 +206,9 @@ jobs:
     needs: [build, github-release]
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout main repo
+        uses: actions/checkout@v4
+
       - name: Checkout homebrew-tap repo
         uses: actions/checkout@v4
         with:
@@ -247,46 +250,12 @@ jobs:
           X64_FILE: ${{ steps.sha.outputs.x64_file }}
         run: |
           mkdir -p homebrew-tap/Casks
-          cat > homebrew-tap/Casks/logos.rb << 'FORMULA'
-          cask "logos" do
-            version "VERSION_PLACEHOLDER"
-
-            on_arm do
-              url "https://github.com/Zixiao-System/logos/releases/download/v#{version}/ARM64_FILE_PLACEHOLDER"
-              sha256 "ARM64_SHA_PLACEHOLDER"
-            end
-
-            on_intel do
-              url "https://github.com/Zixiao-System/logos/releases/download/v#{version}/X64_FILE_PLACEHOLDER"
-              sha256 "X64_SHA_PLACEHOLDER"
-            end
-
-            name "Logos"
-            desc "A Modern, Lightweight Code Editor"
-            homepage "https://github.com/Zixiao-System/logos"
-
-            livecheck do
-              url :url
-              strategy :github_latest
-            end
-
-            app "Logos.app"
-
-            zap trash: [
-              "~/Library/Application Support/logos",
-              "~/Library/Caches/io.zixiao.logos",
-              "~/Library/Preferences/io.zixiao.logos.plist",
-              "~/Library/Saved Application State/io.zixiao.logos.savedState",
-            ]
-          end
-          FORMULA
-
-          # Replace placeholders
-          sed -i "s/VERSION_PLACEHOLDER/${VERSION}/g" homebrew-tap/Casks/logos.rb
-          sed -i "s/ARM64_SHA_PLACEHOLDER/${ARM64_SHA}/g" homebrew-tap/Casks/logos.rb
-          sed -i "s/X64_SHA_PLACEHOLDER/${X64_SHA}/g" homebrew-tap/Casks/logos.rb
-          sed -i "s/ARM64_FILE_PLACEHOLDER/${ARM64_FILE}/g" homebrew-tap/Casks/logos.rb
-          sed -i "s/X64_FILE_PLACEHOLDER/${X64_FILE}/g" homebrew-tap/Casks/logos.rb
+          cp packaging/homebrew/logos.rb.template homebrew-tap/Casks/logos.rb
+          sed -i "s/@@VERSION@@/${VERSION}/g" homebrew-tap/Casks/logos.rb
+          sed -i "s/@@ARM64_SHA@@/${ARM64_SHA}/g" homebrew-tap/Casks/logos.rb
+          sed -i "s/@@X64_SHA@@/${X64_SHA}/g" homebrew-tap/Casks/logos.rb
+          sed -i "s/@@ARM64_FILE@@/${ARM64_FILE}/g" homebrew-tap/Casks/logos.rb
+          sed -i "s/@@X64_FILE@@/${X64_FILE}/g" homebrew-tap/Casks/logos.rb
 
       - name: Commit and push to homebrew-tap
         working-directory: homebrew-tap
@@ -347,69 +316,10 @@ jobs:
           APPIMAGE_SHA: ${{ steps.sha.outputs.appimage_sha }}
           APPIMAGE_NAME: ${{ steps.sha.outputs.appimage_name }}
         run: |
-          cat > aur-repo/PKGBUILD << 'PKGBUILD_EOF'
-# Maintainer: Zixiao System <hwllochen@qq.com>
-pkgname=logos-bin
-pkgver=VERSION_PLACEHOLDER
-pkgrel=1
-pkgdesc="A Modern, Lightweight Code Editor"
-arch=('x86_64')
-url="https://github.com/Zixiao-System/logos"
-license=('MIT')
-depends=('gtk3' 'nss' 'alsa-lib' 'libxss' 'libxtst')
-optdepends=(
-  'git: Git integration'
-  'bash: Terminal support'
-  'zsh: ZSH terminal support'
-)
-provides=('logos')
-conflicts=('logos' 'logos-git')
-source_x86_64=("${pkgname}-${pkgver}.AppImage::https://github.com/Zixiao-System/logos/releases/download/v${pkgver}/APPIMAGE_NAME_PLACEHOLDER")
-sha256sums_x86_64=('APPIMAGE_SHA_PLACEHOLDER')
-options=('!strip')
-
-prepare() {
-  chmod +x "${srcdir}/${pkgname}-${pkgver}.AppImage"
-  "${srcdir}/${pkgname}-${pkgver}.AppImage" --appimage-extract
-}
-
-package() {
-  install -dm755 "${pkgdir}/opt/${pkgname}"
-  cp -r "${srcdir}/squashfs-root/"* "${pkgdir}/opt/${pkgname}/"
-  chmod 755 "${pkgdir}/opt/${pkgname}/logos"
-
-  install -dm755 "${pkgdir}/usr/bin"
-  ln -s "/opt/${pkgname}/logos" "${pkgdir}/usr/bin/logos"
-
-  install -Dm644 /dev/stdin "${pkgdir}/usr/share/applications/logos.desktop" << EOF
-[Desktop Entry]
-Name=Logos
-Comment=A Modern, Lightweight Code Editor
-Exec=/opt/${pkgname}/logos %U
-Icon=logos
-Type=Application
-Categories=Development;IDE;TextEditor;
-MimeType=text/plain;inode/directory;
-StartupWMClass=Logos
-EOF
-
-  for size in 16 32 48 64 128 256 512; do
-    if [ -f "${srcdir}/squashfs-root/usr/share/icons/hicolor/${size}x${size}/apps/logos.png" ]; then
-      install -Dm644 "${srcdir}/squashfs-root/usr/share/icons/hicolor/${size}x${size}/apps/logos.png" \
-        "${pkgdir}/usr/share/icons/hicolor/${size}x${size}/apps/logos.png"
-    fi
-  done
-
-  if [ -f "${srcdir}/squashfs-root/LICENSE" ]; then
-    install -Dm644 "${srcdir}/squashfs-root/LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
-  fi
-}
-PKGBUILD_EOF
-
-          # Replace placeholders
-          sed -i "s/VERSION_PLACEHOLDER/${VERSION}/g" aur-repo/PKGBUILD
-          sed -i "s/APPIMAGE_SHA_PLACEHOLDER/${APPIMAGE_SHA}/g" aur-repo/PKGBUILD
-          sed -i "s/APPIMAGE_NAME_PLACEHOLDER/${APPIMAGE_NAME}/g" aur-repo/PKGBUILD
+          cp packaging/aur/PKGBUILD.template aur-repo/PKGBUILD
+          sed -i "s/@@VERSION@@/${VERSION}/g" aur-repo/PKGBUILD
+          sed -i "s/@@APPIMAGE_SHA@@/${APPIMAGE_SHA}/g" aur-repo/PKGBUILD
+          sed -i "s/@@APPIMAGE_NAME@@/${APPIMAGE_NAME}/g" aur-repo/PKGBUILD
 
       - name: Update .SRCINFO
         working-directory: aur-repo
