--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Logos",
-  "version": "2026.3.0",
+  "version": "2026.3.1",
   "description": "Logos - A Modern, Lightweight Code Editor",
   "author": {
     "name": "Zixiao System",
@@ -35,6 +35,7 @@
     "@xterm/addon-web-links": "^0.10.0",
     "@xterm/xterm": "^5.4.0",
     "axios": "^1.6.8",
+    "electron-log": "^5.4.3",
     "electron-updater": "^6.7.3",
     "logos-wasm": "file:logos-lang/pkg",
     "mdui": "^2.0.0",
@@ -72,6 +73,13 @@
   "build": {
     "appId": "io.zixiao.logos",
     "productName": "Logos",
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "Zixiao-System",
+        "repo": "logos"
+      }
+    ],
     "directories": {
       "output": "release"
     },
