--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build && electron-builder",
-    "build:wasm": "cd logos-lang && export WASI_SDK_PATH=\"$HOME/wasi-sdk-29.0-arm64-macos\" && export CC_wasm32_unknown_unknown=\"${WASI_SDK_PATH}/bin/clang\" && export CFLAGS_wasm32_unknown_unknown=\"--target=wasm32-wasi --sysroot=${WASI_SDK_PATH}/share/wasi-sysroot -fno-exceptions\" && wasm-pack build crates/logos-wasm --target web --release --out-dir ../../pkg --out-name logos-lang",
+    "build:daemon": "cd logos-lang && cargo build --release --package logos-daemon",
     "preview": "vite preview",
     "electron:dev": "vite --mode electron",
     "electron:build": "npm run build",
@@ -37,7 +37,6 @@
     "axios": "^1.6.8",
     "electron-log": "^5.4.3",
     "electron-updater": "^6.7.3",
-    "logos-wasm": "file:logos-lang/pkg",
     "mdui": "^2.0.0",
     "monaco-editor": "^0.47.0",
     "node-pty": "^1.0.0",
@@ -90,6 +89,12 @@
     "mac": {
       "category": "public.app-category.developer-tools",
       "icon": "build/icon.icns",
+      "extraResources": [
+        {
+          "from": "logos-lang/target/release/logos-daemon",
+          "to": "bin/logos-daemon"
+        }
+      ],
       "target": [
         {
           "target": "dmg",
@@ -109,6 +114,12 @@
     },
     "win": {
       "icon": "build/icon.ico",
+      "extraResources": [
+        {
+          "from": "logos-lang/target/release/logos-daemon.exe",
+          "to": "bin/logos-daemon.exe"
+        }
+      ],
       "target": [
         {
           "target": "nsis",
@@ -126,6 +137,12 @@
     },
     "linux": {
       "icon": "build/icon.png",
+      "extraResources": [
+        {
+          "from": "logos-lang/target/release/logos-daemon",
+          "to": "bin/logos-daemon"
+        }
+      ],
       "target": [
         {
           "target": "AppImage",
